# labs_inf_esis_alexander

./: .gitignore  README.md
1 semester/lab1/: start.sh
1 semester/lab2/bench/: CMakeLists.txt
1 semester/lab2/src/: main.cpp
1 semester/lab2/src/graph/: graph.h
1 semester/lab2/src/matrix/: diagonalMatrix.h
1 semester/lab2/tst/tst_arr/: test_dynamicarray.cpp
1 semester/lab3/src/arr/: dynamicarray.h  dynamicarray.tpp
1 semestr/lab2/src/vector/: vector.tpp
1 semestr/lab3/src/queue/: queue.h
1 semestr/lab3/tst/: CMakeLists.txt
2 semester/: .gitmodules
2 semester/lab1/: CMakeLists.txt  Makefile  README.md  main.c
2 semester/lab1/bench/: main.cpp
2 semester/lab1/src/: CMakeLists.txt  main.cpp
2 semester/lab1/src/arr/: arraysequence.tpp
2 semester/lab1/src/graph/: graph.cpp  graph.h
2 semester/lab1/src/list/: linkedlist.h
2 semester/lab1/src/sort/: sort.tpp
2 semester/lab1/tst/: CMakeLists.txt
2 semester/lab2/tst/tst_matrix/: test_matrix.cpp
2 semester/lab3/bench/: CMakeLists.txt
2 semester/lab3/src/: CMakeLists.txt
2 semester/lab3/src/queue/: phqueue.h
2 semester/lab3/src/seq/: sequence.h
2 semester/lab3/tst/: main.cpp
3 semester/lab1/: CMakeLists.txt  examples.c  examples.h
3 semester/lab1/src/: main.cpp
3 semester/lab1/src/list/: listsequence.h
3 semester/lab1/src/sort/: sort.tpp
3 semester/lab1/tst/tst_sort/: test_sort.cpp
3 semester/lab2/: CMakeLists.txt  README.md
3 semester/lab2/bench/: CMakeLists.txt  main.cpp
3 semester/lab2/source/: CMakeLists.txt  main.cpp
3 semester/lab2/source/arr/: arraysequence.h  dynamicarray.tpp
3 semester/lab2/source/list/: listsequence.tpp
3 semester/lab2/source/matrix_sparse/: pair.h
3 semester/lab2/source/queue/: queue.h
3 semester/lab2/source/seq/: sequence.h
3 semester/lab2/source/sort/: ISorter.h  sort.h
3 semester/lab2/source/tree/: AVL.h  AVL.tpp  sparse_matrix_BTree.h  sparse_matrix_BTree.tpp  tree.h
3 semester/lab2/tests/: CMakeLists.txt
3 semester/lab2/tests/tst_tree/: test_sparse_matrix.cpp
3 semester/lab3/: CMakeLists.txt  README.md
3 semester/lab3/old/: 1.cpp  2.cpp
3 semester/lab3/source/: CMakeLists.txt  main.cpp
3 semester/lab3/source/graph/: graph.cpp  graph.h  graph.tpp
3 semester/lab3/source/matrix/: matrix.h  squareMatrix.h
3 semester/lab3/source/matrix_sparse/: balance.h  map.h
3 semester/lab3/source/stack/: stack.h
3 semester/lab3/source/tree/: TreeNodeVector.h
3 semester/lab3/src/: CMakeLists.txt
3 semester/lab3/src/arr/: arraysequence.h
3 semester/lab3/src/matrix/: matrix.tpp
3 semester/lab3/tests/: CMakeLists.txt
3 semester/lab3/tests/tst_tree/: test_tree.cpp
3 semester/lab3/tst/: CMakeLists.txt
3 semester/lab3/tst/tst_vector/: test_vector.cpp
cpp_test/: CMakeLists.txt  main.cpp
examen/: CMakeLists.txt
lab1/: .gitignore  CMakeLists.txt  Readme.md  array.c  array.h  integer.c  integer.cpp  integer.h  main.c  reals.c  reals.h  test2.cpp  twt.cpp
lab1/Array_lib/: array.c  array.h
lab2/: CMakeLists.txt  matrix.txt
lab2/arr/: arraysequence.h  dynamicarray.cpp  dynamicarray.h
lab2/bench/: CMakeLists.txt  main.cpp
lab2/list/: listsequence.h
lab2/sequence/: custom.h  sequence.h
lab2/src/: CMakeLists.txt  main.cpp
lab2/src/arr/: arraysequence.h  arraysequence.tpp  dynamicarray.cpp  dynamicarray.h  dynamicarray.tpp
lab2/src/graph/: graph.cpp
lab2/src/list/: linkedlist.h  linkedlist.tpp  listsequence.h  listsequence.tpp
lab2/src/matrix/: diagonalMatrix.h  matrix.h  matrix.tpp  squareMatrix.h  triangularMatrix.h
lab2/src/seq/: sequence.h
lab2/src/sequence/: custom.h  sequence.h
lab2/src/vector/: vector.h
lab2/tst/: CMakeLists.txt  main.cpp
lab2/tst/tst_arr/: test_arraysequence.cpp  test_dynamicarray.cpp
lab2/tst/tst_list/: test_linkedlist.cpp  test_listsequence.cpp
lab2/tst/tst_matrix/: test_matrix.cpp
lab2/tst/tst_vector/: test_vector.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/src/: main.cpp
lab3/tst/: main.cpp
